force-app/main/default/objects/Lead/fields/Longest_Sobriety_Period__c.field-meta.xml
<CustomField>
    <fullName>Longest_Sobriety_Period__c</fullName>
    <label>Longest Sobriety Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>