force-app/main/default/objects/Lead/fields/Manual_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want to manually assign the Outreach Rep.</description>
    <inlineHelpText>Check this box if you want to manually assign the Outreach Rep.</inlineHelpText>
    <label>Manual Assignment</label>
    <type>Checkbox</type>
</CustomField>