force-app/main/default/objects/Lead/fields/Mass_Touch__c.field-meta.xml
<CustomField>
    <fullName>Mass_Touch__c</fullName>
    <description>This is a background field to Mass update flows on existing records. Not used for data purposes</description>
    <label>Mass Touch</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>