force-app/main/default/objects/Lead/fields/Medicaid_State_Insurances__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_State_Insurances__c</fullName>
    <label>Medicaid/State Insurances</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Insurance_Carrier_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CT Medicaid</fullName>
            </value>
            <value>
                <fullName>FL Medicaid</fullName>
            </value>
            <value>
                <fullName>IN Medicaid</fullName>
            </value>
            <value>
                <fullName>KY Medicaid</fullName>
            </value>
            <value>
                <fullName>MA Medicaid</fullName>
            </value>
            <value>
                <fullName>ME Medicaid</fullName>
            </value>
            <value>
                <fullName>NH Medicaid</fullName>
            </value>
            <value>
                <fullName>OH Medicaid</fullName>
            </value>
            <value>
                <fullName>RI Medicaid</fullName>
            </value>
            <value>
                <fullName>VA Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>