force-app/main/default/objects/Lead/fields/Medical_Issues__c.field-meta.xml
<CustomField>
    <fullName>Medical_Issues__c</fullName>
    <label>Medical Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>