force-app/main/default/objects/Lead/fields/Medical_Marijuana_Card__c.field-meta.xml
<CustomField>
    <fullName>Medical_Marijuana_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Marijuana Card?</label>
    <type>Checkbox</type>
</CustomField>