force-app/main/default/objects/Lead/fields/Middle_Name_or_initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_or_initial__c</fullName>
    <label>Middle Name (or initial)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>