force-app/main/default/objects/Lead/fields/Next_steps_for_referral__c.field-meta.xml
<CustomField>
    <fullName>Next_steps_for_referral__c</fullName>
    <inlineHelpText>Picklist field for providers referring patients via the website.</inlineHelpText>
    <label>Next steps for referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Me</fullName>
            </value>
            <value>
                <fullName>Contact Patient</fullName>
            </value>
            <value>
                <fullName>Patient will contact Aware Recovery Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>