force-app/main/default/objects/Lead/fields/No_Availability_to_Schedule_SOC__c.field-meta.xml
<CustomField>
    <fullName>No_Availability_to_Schedule_SOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Availability to Schedule SOC</label>
    <type>Checkbox</type>
</CustomField>