force-app/main/default/objects/Lead/fields/Objections_to_Care__c.field-meta.xml
<CustomField>
    <fullName>Objections_to_Care__c</fullName>
    <label>Objections to Care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>