force-app/main/default/objects/Lead/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Medical Professional</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Administrative</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Business Owner</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Clerical Worker</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Executive</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Homemaker</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Not answered</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Professional</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Unskilled Labor</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Sales Professional</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Unskilled, Unemployed</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Human / Public Service</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Building Trades / Skilled Manual</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>Disability</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>Educational Professional</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Engineering Professional</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>Entertainment Professional</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>Financial</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Government Official</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Healthcare Worker</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>Information Technology</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Legal Professional</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>Real Estate</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Religious Professional</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Sports Professional</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Manager</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Landscaping</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>Marketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>