force-app/main/default/objects/Lead/fields/Occupation_Status__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Status__c</fullName>
    <label>Occupation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Part time</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Full-time (35+ hr/week)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Homemaker</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Part-time (irregular hours)</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Part-time (regular hours)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Retired/Disability</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Unemployed</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Retired</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>72</fullName>
                <label>Not Answered</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>Medical Leave</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>Military</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>In Controlled Environment</label>
            </value>
            <value>
                <fullName>Disability</fullName>
                <isActive>false</isActive>
                <label>Disability-Old</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
                <isActive>false</isActive>
                <label>Disabled-Old</label>
            </value>
            <value>
                <fullName>Full-Time (35+ hr/week)</fullName>
                <isActive>false</isActive>
                <label>Full-Time (35+ hr/week)-Old</label>
            </value>
            <value>
                <fullName>Homemaker</fullName>
                <isActive>false</isActive>
                <label>Homemaker-Old</label>
            </value>
            <value>
                <fullName>In Controlled Environment</fullName>
                <isActive>false</isActive>
                <label>In Controlled Environment-Old</label>
            </value>
            <value>
                <fullName>Medical Leave</fullName>
                <isActive>false</isActive>
                <label>Medical Leave-Old</label>
            </value>
            <value>
                <fullName>Military</fullName>
                <isActive>false</isActive>
                <label>Military-Old</label>
            </value>
            <value>
                <fullName>Not Answered</fullName>
                <isActive>false</isActive>
                <label>Not Answered-Old</label>
            </value>
            <value>
                <fullName>Part-time (irregular hours)</fullName>
                <isActive>false</isActive>
                <label>Part-time (irregular hours)-Old</label>
            </value>
            <value>
                <fullName>Part-time (regular hours)</fullName>
                <isActive>false</isActive>
                <label>Part-time (regular hours)-Old</label>
            </value>
            <value>
                <fullName>Part-time</fullName>
                <isActive>false</isActive>
                <label>Part-time-Old</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired-Old</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student-Old</label>
            </value>
            <value>
                <fullName>Unemployed</fullName>
                <isActive>false</isActive>
                <label>Unemployed-Old</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>