force-app/main/default/objects/Lead/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Long Term Sobriety</fullName>
            </value>
            <value>
                <fullName>Clinical Barriers</fullName>
            </value>
            <value>
                <fullName>Awaiting Financial Agreement</fullName>
            </value>
            <value>
                <fullName>High Deductible</fullName>
            </value>
            <value>
                <fullName>Hospitalized - Medical/Psych</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Outside Current Catchment</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Went to different LOC</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Unwilling for tx at this time</fullName>
            </value>
            <value>
                <fullName>HLOC VOB Only</fullName>
            </value>
            <value>
                <fullName>Pending active insurance</fullName>
            </value>
            <value>
                <fullName>Spanish Speaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>