force-app/main/default/objects/Lead/fields/On_Starts__c.field-meta.xml
<CustomField>
    <fullName>On_Starts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Starts Sheet?</label>
    <type>Checkbox</type>
</CustomField>