force-app/main/default/objects/Lead/fields/Open_VOBs__c.field-meta.xml
<CustomField>
    <fullName>Open_VOBs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open VOBs</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>VOB__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>VOB__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>