force-app/main/default/objects/Lead/fields/Other_Family_Friends_Info__c.field-meta.xml
<CustomField>
    <fullName>Other_Family_Friends_Info__c</fullName>
    <label>Other Family/Friends Info</label>
    <type>TextArea</type>
</CustomField>