force-app/main/default/objects/Lead/fields/Out_of_Net_Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Net_Co_Insurance__c</fullName>
    <label>Co-Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>