force-app/main/default/objects/Lead/fields/Out_of_Net_Deductible_RemainingTimePerio__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Net_Deductible_RemainingTimePerio__c</fullName>
    <label>RemainingTime Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>