force-app/main/default/objects/Lead/fields/Out_of_Net_Out_of_Pkt_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Net_Out_of_Pkt_Remaining__c</fullName>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>