force-app/main/default/objects/Lead/fields/Outreach_Rep__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>