force-app/main/default/objects/Lead/fields/Overdose_History__c.field-meta.xml
<CustomField>
    <fullName>Overdose_History__c</fullName>
    <label>Overdose History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>