force-app/main/default/objects/Lead/fields/Overdose_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overdose_Reason__c</fullName>
    <label>Overdose Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intentional</fullName>
            </value>
            <value>
                <fullName>Accidental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>