force-app/main/default/objects/Lead/fields/Parents_Info__c.field-meta.xml
<CustomField>
    <fullName>Parents_Info__c</fullName>
    <label>Parent&apos;s Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>