force-app/main/default/objects/Lead/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Name</label>
    <referenceTo>VerifyTx__VTX_Payer_Detail__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>