force-app/main/default/objects/Lead/fields/Payer_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name_text__c</fullName>
    <label>Payer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>