force-app/main/default/objects/Lead/fields/Payor_Aura__c.field-meta.xml
<CustomField>
    <fullName>Payor_Aura__c</fullName>
    <label>Payor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna - OON</fullName>
            </value>
            <value>
                <fullName>BCBS - Anthem CT</fullName>
            </value>
            <value>
                <fullName>BCBS - Anthem ME</fullName>
            </value>
            <value>
                <fullName>BCBS - Anthem NH</fullName>
            </value>
            <value>
                <fullName>Beacon Health Options -</fullName>
            </value>
            <value>
                <fullName>Cigna - OON</fullName>
            </value>
            <value>
                <fullName>Connecticare (Optum) - OON</fullName>
            </value>
            <value>
                <fullName>CT - BCBS of MA</fullName>
            </value>
            <value>
                <fullName>CT - All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>CT - BCBS of RI</fullName>
            </value>
            <value>
                <fullName>FL-BCBS</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim (Optum) - OON</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Magellan</fullName>
            </value>
            <value>
                <fullName>ME - All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>ME - BCBS of MA</fullName>
            </value>
            <value>
                <fullName>ME - BCBS of RI</fullName>
            </value>
            <value>
                <fullName>ME - VA</fullName>
            </value>
            <value>
                <fullName>Medicare - OON</fullName>
            </value>
            <value>
                <fullName>NH - All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>NH - BCBS of MA</fullName>
            </value>
            <value>
                <fullName>NH - BCBS of RI</fullName>
            </value>
            <value>
                <fullName>Optum - OON</fullName>
            </value>
            <value>
                <fullName>Oxford - OON</fullName>
            </value>
            <value>
                <fullName>Tufts - Tufts</fullName>
            </value>
            <value>
                <fullName>Unassigned Funding</fullName>
            </value>
            <value>
                <fullName>United Health Care (Optum) - OON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>