force-app/main/default/objects/Lead/fields/Pets__c.field-meta.xml
<CustomField>
    <fullName>Pets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pets?</label>
    <type>Checkbox</type>
</CustomField>