force-app/main/default/objects/Lead/fields/Pings_Participation__c.field-meta.xml
<CustomField>
    <fullName>Pings_Participation__c</fullName>
    <label>Pings Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>