force-app/main/default/objects/Lead/fields/Policy_Holder_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Address_1__c</fullName>
    <label>Policy Holder Address 1</label>
    <type>TextArea</type>
</CustomField>