force-app/main/default/objects/Lead/fields/Policy_Holder_City__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_City__c</fullName>
    <label>Policy Holder City</label>
    <type>TextArea</type>
</CustomField>