force-app/main/default/objects/Lead/fields/Policy_Holder_First_name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_First_name__c</fullName>
    <label>Policy Holder First name</label>
    <type>TextArea</type>
</CustomField>