force-app/main/default/objects/Lead/fields/Policy_Holder_Gender__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Gender__c</fullName>
    <label>Policy Holder Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>