force-app/main/default/objects/Lead/fields/Policy_Holder_if_self__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_if_self__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Holder (if self)</label>
    <type>Checkbox</type>
</CustomField>