force-app/main/default/objects/Lead/fields/Policy_Holder_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Last_Name__c</fullName>
    <label>Policy Holder Last Name</label>
    <type>TextArea</type>
</CustomField>