force-app/main/default/objects/Lead/fields/Policy_Holder_Middle_Iniital__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Middle_Iniital__c</fullName>
    <label>Policy Holder Middle Iniital</label>
    <type>TextArea</type>
</CustomField>