force-app/main/default/objects/Lead/fields/Policy_Holder_State__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_State__c</fullName>
    <label>Policy Holder State</label>
    <type>TextArea</type>
</CustomField>