force-app/main/default/objects/Lead/fields/Policy_Holder_Zip__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Zip__c</fullName>
    <label>Policy Holder Zip</label>
    <type>TextArea</type>
</CustomField>