force-app/main/default/objects/Lead/fields/Policy_Number_AURA__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_AURA__c</fullName>
    <label>Member Id/Policy #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>