force-app/main/default/objects/Lead/fields/Preferred_Language_AURA__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_AURA__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Spanish; Castilian</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Afar</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Abkhazian</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Afrikaans</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Akan</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Albanian</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Amharic</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Aragonese</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Armenian</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Declined to specify</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Assamese</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Avaric</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Avestan</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Aymara</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Azerbaijani</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Bashkir</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Bambara</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Basque</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Belarusian</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Bengali</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Bihari languages</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Bislama</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>