force-app/main/default/objects/Lead/fields/Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronouns__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
                <label>He/His/Him</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>She/Her/Hers</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>They/Them/Theirs</label>
            </value>
            <value>
                <fullName>He/Him</fullName>
                <isActive>false</isActive>
                <label>He/Him</label>
            </value>
            <value>
                <fullName>She/Her</fullName>
                <isActive>false</isActive>
                <label>She/Her</label>
            </value>
            <value>
                <fullName>They/Them</fullName>
                <isActive>false</isActive>
                <label>They/Them</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>